fix cutting off descenders on dashboard

--- a/assets/styles/dashboard/dashboard.scss
+++ b/assets/styles/dashboard/dashboard.scss
@@ -485,7 +485,7 @@ a {
   margin        : 0;
   max-width     : 250px;
   white-space   : nowrap;
-  overflow      : hidden;
+  line-height   : 20px;
   text-overflow : ellipsis;
 }
 
